# 275-Mini1

./: .gitignore  CMakeLists.txt  Mini1_Research_Implementation_Plan.md  README.md  decision_journal.md  results_full_p1.csv  results_full_p2.csv  results_full_p3.csv
report/: Dataset_Analysis_for_Presentation.md  Mini1_Poster.html  Mini1_Report.md
scripts/: plot_benchmarks.py  run_benchmarks.sh
src/: BenchmarkHarness.cpp  BenchmarkHarness.h  CSVParser.cpp  CSVParser.h  DataStore.cpp  DataStore.h  DataStoreSoA.cpp  DataStoreSoA.h  QueryEngine.cpp  QueryEngine.h  ServiceRequest.cpp  ServiceRequest.h  main.cpp  soa_parse_only.cpp
test/: test_parser.cpp  test_queries.cpp
